# imitation-learning

./: .gitignore  README.md  model_bc.onnx  pyproject.toml
configs/: evaluate_torch.yaml  train_torch.yaml
data/models/: mlp.ckpt  model_bc.onnx  model_gail.onnx
scripts/: clean_data.py  eval.py  evaluate_torch.py  sb3_imitation.py  train_torch.py
src/imitation_learning/: bc_model.py  callbacks.py  data_module.py  dataset.py  trainer.py
