[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imitation_learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "godot-rl>=0.8.2",
    "hydra-core>=1.3.2",
    "imitation>=1.0.1",
    "lightning>=2.6.0",
    "onnx>=1.19.0",
    "onnxscript>=0.5.7",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]
